--- a/public/css/app.css
+++ b/public/css/app.css
@@ -75,3 +75,90 @@ img {
      object-position: top;
 }
 
+main {
+  background-color: #1d1d1d;
+  color: white;
+}
+
+main .content {
+  position: relative;
+  display: flex;
+  flex-wrap: wrap;
+  padding: 30px 20px;
+}
+
+main .card {
+  width: calc(100% / 6 - 20px);
+  height: 150px;
+  border: 1px solid black;
+  margin: 30px 10px;
+}
+
+main .card img {
+  width: 100%;
+  height: 100%;
+}
+
+main .card h4 {
+  font-size: 16px;
+  margin-top: 10px;
+  font-weight: 400;
+  cursor: pointer;
+}
+
+main .card h4:hover {
+  color: #0082f9;
+}
+
+footer .container {
+  display: flex;
+  justify-content: space-between;
+}
+
+footer .footer_bottom {
+  height: 100px;
+  line-height: 100px;
+  background-color: #303030;
+}
+
+footer .button a {
+  text-decoration: none;
+  text-transform: uppercase;
+  padding: 10px 10px;
+  border: 2px solid #0082f9;
+  color: white;
+  font-weight: bolder;
+  font-size: 14px;
+}
+
+footer .button a:hover {
+  border: 2px solid white;
+  color: #0082f9;
+}
+
+footer .follow {
+  text-decoration: none;
+  color: #0082f9;
+  font-size: 14px;
+  font-weight: bolder;
+  vertical-align: middle;
+}
+
+footer .follow:hover {
+  color: white;
+}
+
+footer ul {
+  display: flex;
+  list-style: none;
+}
+
+footer ul li a {
+  padding: 0 8px;
+}
+
+footer img {
+  height: 30px;
+  vertical-align: middle;
+}
+
